# yabench

./: .gitignore  README.md  main.py  pyproject.toml  yabench.example.yaml  yabench.yaml
datasets/: alpaca-en-500.jsonl  alpaca-zh-500.jsonl  sample-en.jsonl  sample-zh.jsonl
yabench/: __init__.py  benchmark.py  cli.py  client.py  config.py  datasets.py
